--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         /* HEADER & NAVIGATION */
         header {
-            background: #1e3a8a; /* Bleu foncé principal */
+            background: white; /* Bleu foncé principal */
             color: #fff;
             padding: 1.5em 0;
             text-align: center;
@@ -212,4 +212,5 @@
         
     </div>
 </body>
+
 </html>
