--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         /* HEADER & NAVIGATION */
         header {
-            background: white; /* Bleu foncé principal */
+            background: yellow; /* Bleu foncé principal */
             color: #fff;
             padding: 1.5em 0;
             text-align: center;
@@ -214,3 +214,4 @@
 </body>
 
 </html>
+
