--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
             <h2>Nos Coordonnées Directes</h2>
             <p><strong>📍 Siège Social :</strong> **Bobo-Dioulasso**</p>
             <p><strong>📞 Tél. Urgence & Support :</strong> **66385699/77300206/50549907**</p>
-            <p><strong>📧 Email Pro :</strong> <a href="mailto:ram2.0442b@gmail.com">ram2.0442b@gmail.com</a></p>
+            <p><strong>📧 Email Pro :</strong> <a href="mailto:corisdorfirm@gmail.com">corisdorfirm@gmail.com</a></p>
             <p><strong>Zone de Service :</strong> Bobo-Dioulasso,Ouahigouya pour les dépannages;installations et partout au Burkina pour question de sites web.</p>
             <p style="font-style: italic;">Nous sommes disponibles du Lundi au samedi pour vous servir.</p>
         </section>
@@ -227,4 +227,5 @@
 
     </div>
 </body>
+
 </html>
