--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             margin: 0;
             padding: 0;
             background-color: #f7f9fc;
-            color: #333;
+            color: #000;
         }
 
         /* HEADER & NAVIGATION */
         header {
-            background: yellow; /* Bleu foncé principal */
+            background: white; /* Bleu foncé principal */
             color: #fff;
             padding: 1.5em 0;
             text-align: center;
@@ -214,4 +214,5 @@
 </body>
 
 </html>
+
 
