--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         }
 
         header .logo-container img {
-            height: 3.2rem; /* Légèrement plus petit en REM */
+            height: 3.2rem;
             margin-right: 1rem;
             filter: brightness(0) invert(1);
         }
 
         header h1 {
             margin: 0;
-            font-size: 2rem; /* Taille de base du titre H1 */
+            font-size: 2rem;
             color: #f7fafc;
         }
 
@@ -66,7 +66,7 @@
             border-radius: 5px;
             transition: background-color 0.3s, color 0.3s;
             font-weight: 600;
-            font-size: 0.95rem; /* Taille de la navigation */
+            font-size: 0.95rem;
         }
 
         nav a:hover, nav a.active {
@@ -91,7 +91,7 @@
             background-size: cover;
             background-position: center;
             background-color: #3182ce;
-            padding: 6rem 2.5rem; /* Plus d'espace pour l'effet hero */
+            padding: 6rem 2.5rem;
             margin-top: 0;
             border-radius: 0 0 10px 10px;
             color: #fff;
@@ -113,13 +113,13 @@
 
         #hero h2 {
             color: #f6ad55;
-            font-size: 2.5rem; /* Taille du titre H2 de Hero */
+            font-size: 2.5rem;
             margin-bottom: 0.5em;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
         }
 
         #hero p {
-            font-size: 1.2rem; /* Taille du texte dans Hero */
+            font-size: 1.2rem;
             color: #cbd5e0;
             max-width: 800px;
             margin: 0 auto 30px auto;
@@ -168,7 +168,7 @@
             text-align: left;
             transition: box-shadow 0.3s, transform 0.2s;
             color: #e2e8f0;
-            font-size: 1rem; /* Texte de carte */
+            font-size: 1rem;
         }
 
         .card:hover {
@@ -179,7 +179,7 @@
         .card h4 {
             color: #81e6d9;
             margin-top: 0.5rem;
-            font-size: 1.2rem; /* Titre de carte */
+            font-size: 1.2rem;
         }
 
         /* Retrait des styles de la bande défilante */
@@ -192,38 +192,43 @@
             display: none;
         }
 
-        /* Responsive adjustments */
+        /* Responsive adjustments (RÉDUCTION SUPPLÉMENTAIRE) */
         @media (max-width: 768px) {
-            /* Ajustement des tailles pour les petits écrans */
             body {
-                font-size: 15px; /* Légère réduction de la taille de base */
+                font-size: 14px; /* Plus petit pour le corps de texte */
             }
             header h1 {
-                font-size: 1.5rem; /* Titre principal plus petit */
+                font-size: 1.3rem; /* Titre principal encore plus petit */
             }
             #hero {
-                padding: 4rem 1.5rem;
+                padding: 3rem 1rem; /* Moins de padding */
             }
             #hero h2 {
-                font-size: 2rem; /* Titre Hero adapté */
+                font-size: 1.8rem; /* Titre Hero réduit */
             }
             #hero p {
-                font-size: 1rem; /* Texte Hero adapté */
+                font-size: 0.9rem; /* Texte Hero réduit */
+            }
+            .cta-button {
+                font-size: 0.95rem; /* Bouton CTA réduit */
+                padding: 0.8rem 1.5rem;
+            }
+            h3 {
+                font-size: 1.5rem;
             }
             .service-cards {
                 flex-direction: column;
+                gap: 1.2rem;
+            }
+            .card {
+                padding: 1.2rem;
+                font-size: 0.9rem;
+            }
+            .card h4 {
+                font-size: 1.1rem;
             }
             nav a {
-                display: block;
-                margin: 5px 0;
-            }
-            header .logo-container {
-                flex-direction: column;
-                margin-bottom: 5px;
-            }
-            header .logo-container img {
-                margin-right: 0;
-                margin-bottom: 10px;
+                font-size: 0.9rem;
             }
         }
     </style>
