--- a/index.html
+++ b/index.html
@@ -77,10 +77,14 @@
 
     /* -------------------- HERO SECTION -------------------- */
     #hero {
-      background: linear-gradient(rgba(15, 23, 42, 0.6), rgba(15, 23, 42, 0.6)),
-        url("fond-tech.jpg") center/cover no-repeat;
+      position: relative;
+      background: linear-gradient(
+          rgba(15, 23, 42, 0.65),
+          rgba(15, 23, 42, 0.65)
+        ),
+        url("hero-bg.jpg") center/cover no-repeat;
       color: #fff;
-      padding: 100px 20px;
+      padding: 120px 20px;
       border-radius: 0 0 40px 40px;
       text-align: center;
       margin-bottom: 40px;
