--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           rgba(15, 23, 42, 0.65),
           rgba(15, 23, 42, 0.65)
         ),
-        url("hero-bg.jpg") center/cover no-repeat;
+        url("imm.jpg") center/cover no-repeat;
       color: #fff;
       padding: 120px 20px;
       border-radius: 0 0 40px 40px;
@@ -219,21 +219,21 @@
     <div class="container">
       <div class="logo-container">
         <img src="logo.jpg" alt="Logo de l'entreprise" />
-        <h1>CORIS D'OR FIRM — Votre partenaire numérique de confiance</h1>
+        <h1>CORIS D'OR FIRM — Une autre conception du monde informatique</h1>
       </div>
       <nav>
-        <a href="index.html">Accueil</a>
+        
         <a href="services.html">Services</a>
         <a href="galerie.html">Galerie</a>
         <a href="a-propos.html">À Propos</a>
-        <a href="contact.html">Contact</a>
+        
       </nav>
     </div>
   </header>
 
   <section id="hero">
     <div class="container">
-      <h2>Votre Solution Informatique, Rapide et Professionnelle</h2>
+      <h2>Rapidité,Expertise et Satisfaction</h2>
       <p>Maintenance, Dépannage et Création de Sites Web modernes pour particuliers et entreprises.</p>
       <a href="contact.html" class="cta-button">Contactez-nous dès maintenant</a>
     </div>
@@ -264,3 +264,4 @@
   </footer>
 </body>
 </html>
+
