--- a/services.html
+++ b/services.html
@@ -70,7 +70,7 @@
         }
 
         .intro {
-            background: url('images/bg-services.jpg') no-repeat center/cover;
+            background: url('imm.jpg') no-repeat center/cover;
             color: white;
             text-align: center;
             padding: 60px 20px;
@@ -248,3 +248,4 @@
 
 </body>
 </html>
+
