--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f5f7fa;
+            background-color: #f8fafc;
             color: #333;
             line-height: 1.6;
         }
@@ -248,4 +248,5 @@
 
 </body>
 </html>
+
 
