--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
         body {
             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f8fafc;
-            color: #333;
+            color: #1e293b;
             line-height: 1.6;
         }
 
@@ -189,7 +189,7 @@
         </div>
         <nav>
             <a href="index.html">Accueil</a>
-            <a href="contact.html">Contact</a>
+           
         </nav>
     </header>
 
@@ -248,5 +248,6 @@
 
 </body>
 </html>
+
 
 
