--- a/services.html
+++ b/services.html
@@ -20,11 +20,11 @@
         }
 
         header {
-            background: linear-gradient(90deg, #1e3a8a, #2563eb);
+            background: linear-gradient(135deg, #0f172a, #1e3a8a);
             color: white;
-            padding: 1.5em 0;
+            padding: 1.rem 0;
             text-align: center;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
         }
 
         header .logo-container {
@@ -248,6 +248,7 @@
 
 </body>
 </html>
+
 
 
 
