--- a/services.html
+++ b/services.html
@@ -71,10 +71,10 @@
 
         .intro {
             background: url('imm.jpg') no-repeat center/cover;
-            color: white;
+            color: #fff;
             text-align: center;
-            padding: 60px 20px;
-            border-radius: 10px;
+            padding: 120px 20px;
+            border-radius: 0 0 40px 40px;
             box-shadow: 0 6px 20px rgba(0,0,0,0.15);
         }
 
@@ -248,6 +248,7 @@
 
 </body>
 </html>
+
 
 
 
