--- a/services.html
+++ b/services.html
@@ -70,23 +70,33 @@
         }
 
         .intro {
-            background: url('imm.jpg') no-repeat center/cover;
-            color: #fff;
-            text-align: center;
-            padding: 120px 20px;
-            border-radius: 0 0 40px 40px;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-        }
+    position: relative;
+    background: url('images/bg-services.jpg') no-repeat center/cover;
+    color: white;
+    text-align: center;
+    padding: 60px 20px;
+    border-radius: 10px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    overflow: hidden;
+}
 
-        .intro h2 {
-            font-size: 2.3em;
-            margin-bottom: 10px;
-        }
+/* Superposition sombre */
+.intro::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Ajuste l’opacité ici : 0.5 = sombre moyen */
+    border-radius: 10px;
+}
 
-        .intro p {
-            font-size: 1.1em;
-            opacity: 0.9;
-        }
+/* Pour que le texte reste visible au-dessus */
+.intro h2, .intro p {
+    position: relative;
+    z-index: 1;
+}
 
         /* ----- Cartes des services ----- */
         .service-item {
@@ -248,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
