--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
 
         .intro {
     position: relative;
-    background: url('images/bg-services.jpg') no-repeat center/cover;
+    background: url('imm.jpg') no-repeat center/cover;
     color: white;
     text-align: center;
     padding: 60px 20px;
@@ -258,6 +258,7 @@
 
 </body>
 </html>
+
 
 
 
