--- a/galerie.html
+++ b/galerie.html
@@ -77,7 +77,7 @@
           rgba(15, 23, 42, 0.6),
           rgba(15, 23, 42, 0.6)
         ),
-        url('imm.jpg') center/cover no-repeat;
+        url('images/galerie-bg.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 100px 20px;
@@ -99,28 +99,9 @@
 
     /* ---------- GALERIE SECTION ---------- */
     #galerie-section {
-    position: relative;
-    padding: 40px 0;
-    text-align: center;
-    background: url('arriere-plan.jpg') center/cover no-repeat;
-}
-
-#galerie-section::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* 🔥 Sombre à 50% */
-    z-index: 0;
-}
-
-#galerie-section * {
-    position: relative;
-    z-index: 1;
-}
-
+      padding: 60px 0;
+      text-align: center;
+    }
 
     #galerie-section h3 {
       color: #1e3a8a;
@@ -218,7 +199,7 @@
       </div>
       <nav>
         <a href="index.html">Accueil</a>
-        
+        <a href="services.html">Services</a>
       </nav>
     </div>
   </header>
@@ -258,4 +239,3 @@
   </div>
 </body>
 </html>
-
