--- a/a-propos.html
+++ b/a-propos.html
@@ -18,7 +18,7 @@
     /* --- En-tête --- */
     header {
       position: relative;
-      background: url('background-about.jpg') center/cover no-repeat;
+      background: url('imm.jpg') center/cover no-repeat;
       color: #fff;
       padding: 100px 20px 80px;
       text-align: center;
@@ -213,3 +213,4 @@
   </div>
 </body>
 </html>
+
