--- a/galerie.html
+++ b/galerie.html
@@ -17,11 +17,11 @@
 
     /* ---------- HEADER ---------- */
     header {
-      background: #1e3a8a;
+       background: linear-gradient(135deg, #0f172a, #1e3a8a);
       color: #fff;
-      padding: 1.5em 0;
+      padding: 1rem 0;
       text-align: center;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -77,7 +77,7 @@
           rgba(15, 23, 42, 0.6),
           rgba(15, 23, 42, 0.6)
         ),
-        url('images/galerie-bg.jpg') center/cover no-repeat;
+        url('imm.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 100px 20px;
@@ -239,3 +239,4 @@
   </div>
 </body>
 </html>
+
