--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     /* --- En-tête avec image sombre --- */
     header {
       position: relative;
-      background: url('background-contact.jpg') center/cover no-repeat;
+      background: url('imm.jpg') center/cover no-repeat;
       color: #fff;
       padding: 100px 20px 80px;
       text-align: center;
@@ -218,8 +218,7 @@
       <h1>Contactez Notre Équipe Technique</h1>
       <nav>
         <a href="index.html">Accueil</a>
-        <a href="galerie.html">Galerie</a>
-        <a href="apropos.html">À propos</a>
+        
       </nav>
     </div>
   </header>
@@ -254,7 +253,7 @@
       <h2>Nos Coordonnées Directes</h2>
       <p><strong>📍 Siège Social :</strong> Bobo-Dioulasso</p>
       <p><strong>📞 Tél. Urgence & Support :</strong> 66385699 / 77300206 / 50549907</p>
-      <p><strong>📧 Email Pro :</strong> <a href="mailto:ram2.0442b@gmail.com">ram2.0442b@gmail.com</a></p>
+      <p><strong>📧 Email Pro :</strong> <a href="mailto:corisdorfirm@gmail.com">corisdorfirm@gmail.com</a></p>
       <p><strong>Zone de Service :</strong> Bobo-Dioulasso, Ouahigouya et partout au Burkina pour la création de sites web.</p>
       <p><em>Disponibilité :</em> Lundi au Samedi</p>
     </section>
@@ -263,3 +262,4 @@
   </div>
 </body>
 </html>
+
