--- a/a-propos.html
+++ b/a-propos.html
@@ -190,7 +190,7 @@
 
     <section>
       <h2>La Naissance d'une Nouvelle Expertise</h2>
-      <p><strong>CORIS D'OR FIRM</strong> a été fondée par <strong>SANOU Amos</strong>, un passionné de l’informatique et de l’innovation technologique. Son objectif : apporter des solutions fiables, modernes et durables dans le domaine du support technique, de l’ingénierie et du développement web.</p>
+      <p><strong>CORIS D'OR FIRM</strong> a été fondée par <strong>SANOU Amos et ZALLA Aristide</strong>, un passionné de l’informatique et de l’innovation technologique. Son objectif : apporter des solutions fiables, modernes et durables dans le domaine du support technique, de l’ingénierie et du développement web.</p>
 
       <p>Notre jeunesse est notre force : elle nous permet d’être <strong>plus réactifs</strong>, de proposer des <strong>tarifs compétitifs</strong> et d’adopter <strong>les technologies les plus récentes</strong>.</p>
 
@@ -212,5 +212,6 @@
   </div>
 </body>
 </html>
+
 
 
