--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
       
       <form action="https://formsubmit.co/corisdorfirm@gmail.com" method="POST">
         <!-- Redirige vers la page de succès -->
-<input type="hidden" name="_next" value="https://TON-NOM-UTILISATEUR.github.io/succes.html">
+<input type="hidden" name="_next" value="https://corisdor.github.io/succes.html">
 
 <!-- Désactive le Captcha (optionnel) -->
 <input type="hidden" name="_captcha" value="false">
@@ -271,5 +271,6 @@
   </div>
 </body>
 </html>
+
 
 
