--- a/services.html
+++ b/services.html
@@ -248,6 +248,16 @@
                 <li>Stratégies de sauvegarde (Cloud et local).</li>
             </ul>
         </div>
+                <div class="service-item">
+            <h2>💾 Récupération de Données Perdues</h2>
+            <p>Vous avez supprimé par erreur un fichier important ou perdu vos données après une panne ? Nous vous aidons à les restaurer efficacement.</p>
+            <ul>
+                <li>Restauration de fichiers supprimés accidentellement.</li>
+                <li>Récupération de données après formatage ou crash disque.</li>
+                <li>Intervention sur disques durs, clés USB et cartes mémoire.</li>
+            </ul>
+        </div>
+
 
         <a href="index.html" class="btn-accueil">← Retour à l'Accueil</a>
     </section>
@@ -258,6 +268,7 @@
 
 </body>
 </html>
+
 
 
 
