--- a/index.html
+++ b/index.html
@@ -255,6 +255,12 @@
           <h4>🌐 Création de Sites Web</h4>
           <p>Conception de sites modernes, responsives et élégants pour renforcer votre image professionnelle en ligne.</p>
         </div>
+        <div class="card">
+  <h4>💾 Récupération de Données Perdues</h4>
+  <p>Vous avez supprimé par erreur un fichier important ou perdu vos données après une panne ? 
+  Nous vous aidons à les restaurer efficacement et en toute confidentialité.</p>
+</div>
+
       </div>
     </section>
   </div>
@@ -264,4 +270,5 @@
   </footer>
 </body>
 </html>
+
 
